--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 					<div class="activity-card__body rounded-top rounded-bottom">
 						<div class="activity-card__title-wrapper">
 							<h2 class="activity-card__title">Work</h2>
-							<img src="images/icon-ellipsis.svg" alt="" class="activity-card__dots" />
+							<!-- <img src="images/icon-ellipsis.svg" alt="" class="activity-card__dots" /> -->
+							<!-- <div class="activity-card__x-dots"></div> -->
+							<svg class="activity-card__dots">
+								<use href="#ellipsis"></use>
+							</svg>
 						</div>
 						<span class="activity-card__current">5hrs</span>
 						<span class="activity-card__previous">Yesterday - 7hrs</span>
@@ -70,7 +74,9 @@
 					<div class="activity-card__body rounded-top rounded-bottom">
 						<div class="activity-card__title-wrapper">
 							<h2 class="activity-card__title">Play</h2>
-							<img src="images/icon-ellipsis.svg" alt="" class="activity-card__dots" />
+							<svg class="activity-card__dots">
+								<use href="#ellipsis"></use>
+							</svg>
 						</div>
 						<span class="activity-card__current">1hr</span>
 						<span class="activity-card__previous">Yesterday - 2hrs</span>
@@ -81,7 +87,9 @@
 					<div class="activity-card__body rounded-top rounded-bottom">
 						<div class="activity-card__title-wrapper">
 							<h2 class="activity-card__title">Study</h2>
-							<img src="images/icon-ellipsis.svg" alt="" class="activity-card__dots" />
+							<svg class="activity-card__dots">
+								<use href="#ellipsis"></use>
+							</svg>
 						</div>
 						<span class="activity-card__current">0hrs</span>
 						<span class="activity-card__previous">Yesterday - 1hr</span>
@@ -94,7 +102,9 @@
 					<div class="activity-card__body rounded-top rounded-bottom">
 						<div class="activity-card__title-wrapper">
 							<h2 class="activity-card__title">Exercise</h2>
-							<img src="images/icon-ellipsis.svg" alt="" class="activity-card__dots" />
+							<svg class="activity-card__dots">
+								<use href="#ellipsis"></use>
+							</svg>
 						</div>
 						<span class="activity-card__current">1hr</span>
 						<span class="activity-card__previous">Yesterday - 1hr</span>
@@ -105,7 +115,9 @@
 					<div class="activity-card__body rounded-top rounded-bottom">
 						<div class="activity-card__title-wrapper">
 							<h2 class="activity-card__title">Social</h2>
-							<img src="images/icon-ellipsis.svg" alt="" class="activity-card__dots" />
+							<svg class="activity-card__dots">
+								<use href="#ellipsis"></use>
+							</svg>
 						</div>
 						<span class="activity-card__current">1hr</span>
 						<span class="activity-card__previous">Yesterday - 3hrs</span>
@@ -118,7 +130,9 @@
 					<div class="activity-card__body rounded-top rounded-bottom">
 						<div class="activity-card__title-wrapper">
 							<h2 class="activity-card__title">Self Care</h2>
-							<img src="images/icon-ellipsis.svg" alt="" class="activity-card__dots" />
+							<svg class="activity-card__dots">
+								<use href="#ellipsis"></use>
+							</svg>
 						</div>
 						<span class="activity-card__current">0hrs</span>
 						<span class="activity-card__previous">Yesterday - 1hr</span>
@@ -133,5 +147,14 @@
 			>. Coded by
 			<a href="https://github.com/pernorin/time-tracking-dashboard">Per Norin</a>.
 		</footer>
+
+		<svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+			<symbol id="ellipsis">
+				<path
+					d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+					fill-rule="evenodd"
+				/>
+			</symbol>
+		</svg>
 	</body>
 </html>
